test_suite/tests/ui/rename/container_unknown_rename_rule.stderr
error: unknown rename rule for #[serde(rename_all = "abc")]
 --> $DIR/container_unknown_rename_rule.rs:4:22
  |
4 | #[serde(rename_all = "abc")]
  |                      ^^^^^
